feat(cli-build-test): enhance CLI, build system, and validation infrastructure
Agents: Agent_Multi_Agent_Coordinator_a7b3c9, Agent_Quantum_Researcher

- Refactor build script for nuclear data ingestion
- Enhance CLI with monitoring and simulation config improvements
- Update demo and test validation dependencies
- Reference: Agent_Multi_Agent_Coordinator_a7b3c9, Agent_Quantum_Researcher job files

--- a/demos/Cargo.toml
+++ b/demos/Cargo.toml
@@ -27,8 +27,16 @@ path = "05_tree_pm_gravity.rs"
 name = "statistical_analysis_demo"
 path = "06_statistical_analysis.rs"
 
+[[bin]]
+name = "stellar_nursery_demo"
+path = "07_stellar_nursery.rs"
+
 [dependencies]
 physics_engine = { path = "../crates/physics_engine" }
-anyhow = { workspace = true }
-nalgebra = { workspace = true }
-rand = { workspace = true }
+physics_types = { path = "../crates/physics_types" }
+universe_sim = { path = "../crates/universe_sim" }
+nalgebra = "0.32"
+rand = "0.8"
+anyhow = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
